fix: sliders not being visible

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,14 @@
 .stash-interactive-tools {
-  section.range-slider {
+  .range-slider {
     position: relative;
     width: 100%;
     height: 35px;
     text-align: center;
 
-    div {
+    div.range-slider-wrapper {
+      position: relative;
+    }
+    div.range-slider-marker {
       position: absolute;
       top: 0.925rem;
       --tw-translate-x: -50%;
@@ -16,6 +19,50 @@
       --tw-text-opacity: 1;
       color: rgb(212 212 216 / var(--tw-text-opacity));
     }
+    input {
+      pointer-events: none;
+      position: absolute;
+      overflow: hidden;
+      left: 0;
+      width: 100%;
+      outline: none;
+      height: 18px;
+      margin: 0;
+      padding: 0;
+      box-shadow: none;
+    }
+
+    input::-webkit-slider-thumb {
+      pointer-events: all;
+      position: relative;
+      z-index: 1;
+      outline: 0;
+    }
+
+    input::-moz-range-thumb {
+      pointer-events: all;
+      position: relative;
+      z-index: 10;
+      -moz-appearance: none;
+      width: 9px;
+    }
+
+    input::-moz-range-track {
+      position: relative;
+      z-index: -1;
+      background-color: rgba(0, 0, 0, 1);
+      border: 0;
+    }
+
+    input:last-of-type::-moz-range-track {
+      -moz-appearance: none;
+      background: none transparent;
+      border: 0;
+    }
+
+    input[type='range']::-moz-focus-outer {
+      border: 0;
+    }
   }
 
   .stroke-range {
@@ -24,51 +71,6 @@
     margin-left: 0.25em;
     font-weight: normal;
     display: block;
-  }
-
-  section.range-slider input {
-    pointer-events: none;
-    position: absolute;
-    overflow: hidden;
-    left: 0;
-    width: 100%;
-    outline: none;
-    height: 18px;
-    margin: 0;
-    padding: 0;
-    box-shadow: none;
-  }
-
-  section.range-slider input::-webkit-slider-thumb {
-    pointer-events: all;
-    position: relative;
-    z-index: 1;
-    outline: 0;
-  }
-
-  section.range-slider input::-moz-range-thumb {
-    pointer-events: all;
-    position: relative;
-    z-index: 10;
-    -moz-appearance: none;
-    width: 9px;
-  }
-
-  section.range-slider input::-moz-range-track {
-    position: relative;
-    z-index: -1;
-    background-color: rgba(0, 0, 0, 1);
-    border: 0;
-  }
-
-  section.range-slider input:last-of-type::-moz-range-track {
-    -moz-appearance: none;
-    background: none transparent;
-    border: 0;
-  }
-
-  section.range-slider input[type='range']::-moz-focus-outer {
-    border: 0;
   }
 }
 
